# mindsage-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/mindsage-browser/: Cargo.toml
crates/mindsage-browser/src/: config.rs  lib.rs  manager.rs  types.rs
crates/mindsage-chat/: Cargo.toml
crates/mindsage-chat/src/: config.rs  lib.rs  providers.rs  types.rs
crates/mindsage-connectors/: Cargo.toml
crates/mindsage-connectors/src/: chatgpt.rs  facebook.rs  lib.rs  manager.rs  types.rs
crates/mindsage-consolidate/: Cargo.toml
crates/mindsage-consolidate/src/: lib.rs  pipeline.rs  types.rs
crates/mindsage-core/: Cargo.toml
crates/mindsage-core/src/: capabilities.rs  config.rs  error.rs  lib.rs
crates/mindsage-infer/: Cargo.toml
crates/mindsage-infer/src/: cache.rs  embedder.rs  lib.rs  onnx_embedder.rs
crates/mindsage-ingest/: Cargo.toml
crates/mindsage-ingest/src/: chunking.rs  extract.rs  file.rs  ingest.rs  lib.rs
crates/mindsage-ingest/src/extract/: entities.rs  filters.rs  passages.rs  stemmer.rs  topics.rs
crates/mindsage-localsend/: Cargo.toml
crates/mindsage-localsend/src/: lib.rs  server.rs  types.rs
crates/mindsage-protocol/: Cargo.toml
crates/mindsage-protocol/src/: consent.rs  lib.rs  pii.rs
crates/mindsage-resolve/: Cargo.toml
crates/mindsage-resolve/src/: hybrid.rs  lib.rs  types.rs
crates/mindsage-runtime/: Cargo.toml
crates/mindsage-runtime/src/: lib.rs  orchestrator.rs  types.rs
crates/mindsage-server/: Cargo.toml
crates/mindsage-server/src/: indexing.rs  main.rs  migrate.rs  state.rs
crates/mindsage-server/src/routes/: browser.rs  chat.rs  connectors.rs  files.rs  indexing.rs  localsend.rs  mod.rs  privacy.rs  stats.rs  vector_store.rs
crates/mindsage-server/tests/: api_parity.rs
crates/mindsage-store/: Cargo.toml
crates/mindsage-store/src/: embedding.rs  graph.rs  lib.rs  schema.rs  sqlite.rs  types.rs
deploy/: README.md  download-models.sh  mindsage.service
docs/: ARCHITECTURE.md  PROGRESS.md
