[workspace]
members = [
    "crates/mindsage-core",
    "crates/mindsage-store",
    "crates/mindsage-ingest",
    "crates/mindsage-resolve",
    "crates/mindsage-infer",
    "crates/mindsage-consolidate",
    "crates/mindsage-runtime",
    "crates/mindsage-protocol",
    "crates/mindsage-server",
    "crates/mindsage-browser",
    "crates/mindsage-localsend",
    "crates/mindsage-chat",
    "crates/mindsage-connectors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }

# Graph
petgraph = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# WebSocket (CDP)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"

# Numeric / embeddings
ndarray = "0.17"

# ONNX Runtime (feature-gated, load-dynamic to use system libonnxruntime)
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "tracing", "load-dynamic"] }
tokenizers = { version = "0.21" }

# Testing
tempfile = "3"

# File processing
zip = "2"

# Network
socket2 = "0.5"

# Async channels / sync
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# Workspace crates
mindsage-core = { path = "crates/mindsage-core" }
mindsage-store = { path = "crates/mindsage-store" }
mindsage-ingest = { path = "crates/mindsage-ingest" }
mindsage-resolve = { path = "crates/mindsage-resolve" }
mindsage-infer = { path = "crates/mindsage-infer" }
mindsage-consolidate = { path = "crates/mindsage-consolidate" }
mindsage-runtime = { path = "crates/mindsage-runtime" }
mindsage-protocol = { path = "crates/mindsage-protocol" }
mindsage-server = { path = "crates/mindsage-server" }
mindsage-browser = { path = "crates/mindsage-browser" }
mindsage-localsend = { path = "crates/mindsage-localsend" }
mindsage-chat = { path = "crates/mindsage-chat" }
mindsage-connectors = { path = "crates/mindsage-connectors" }
