[package]
name = "mindsage-browser"
description = "Browser connector: Chrome lifecycle, CDP, extension relay"
version.workspace = true
edition.workspace = true

[dependencies]
mindsage-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
