[package]
name = "mindsage-consolidate"
description = "Dedup, prune, compress, evict, rebalance"
version.workspace = true
edition.workspace = true

[dependencies]
mindsage-core = { workspace = true }
mindsage-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
