[package]
name = "mindsage-ingest"
version.workspace = true
edition.workspace = true

[dependencies]
mindsage-core = { workspace = true }
mindsage-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
