[package]
name = "mindsage-localsend"
description = "LocalSend v2: UDP multicast, mDNS, file transfer"
version.workspace = true
edition.workspace = true

[dependencies]
mindsage-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
